<resources>
    <string name="app_name">Kid\'s game</string>
    <string name="action_settings">Settings</string>
    <string name="armand">armand</string>
    <string name="hisae">hisae</string>
    <string name="db_url">https://torid-torch-6190.firebaseio.com/</string>
    <string name="pref_db_connection">Database connection</string>
    <string name="pref_db_url">URL</string>
    <string name="pref_db_auth_require">Authentication needed</string>
    <string name="pref_db_auth">Database Authentication</string>
    <string name="pref_db_login">Login</string>
    <string name="pref_db_password">Password</string>
</resources>
