<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_db"
        android:title="@string/pref_db_connection">
        <EditTextPreference
            android:key="pref_db_url"
            android:title="@string/pref_db_url"
            android:defaultValue="@string/db_url"/>
        <CheckBoxPreference
            android:key="pref_db_auth_require"
            android:title="@string/pref_db_auth_require"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_db_auth"
        android:title="@string/pref_db_auth"
        >
        <EditTextPreference
            android:key="pref_db_login"
            android:title="@string/pref_db_login"
            android:inputType="textEmailAddress"/>
        <EditTextPreference
            android:key="pref_db_password"
            android:title="@string/pref_db_password"
            android:inputType="textPassword"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Youpi">
    </PreferenceCategory>
</PreferenceScreen>
